# MT3620_Grove_Shield

./: .gitignore  MT3620_Grove_Shield_Library.sln  README.md
MT3620_Grove_Shield_Library/: CMakeLists.txt  MT3620_Grove_Shield_Library.vcxproj  MT3620_Grove_Shield_Library.vcxproj.filters  app_manifest.json  main.c  timer_utility.c  timer_utility.h
MT3620_Grove_Shield_Library/Sensors/: GroveOledDisplay96x96.c  GroveOledDisplay96x96.h  GroveTempHumiSHT31.c  GroveTempHumiSHT31.h
MT3620_Grove_Shield_Library/include/HAL/: GroveI2C.h  GroveShield.h  GroveUART.h
MT3620_Grove_Shield_Library/include/Sensors/: Grove4DigitDisplay.h  GroveAD7992.h  GroveLEDButton.h  GroveLightSensor.h  GroveOledDisplay96x96.h  GroveRelay.h  GroveRotaryAngleSensor.h  GroveTempHumiBaroBME280.h  GroveTempHumiSHT31.h
MT3620_Grove_Shield_Library/src/Common/: Delay.c
MT3620_Grove_Shield_Library/src/HAL/: GroveI2C.c  GroveShield.c  GroveUART.c
MT3620_Grove_Shield_Library/src/Sensors/: Grove4DigitDisplay.c  GroveAD7992.c  GroveLEDButton.c  GroveLightSensor.c  GroveOledDisplay96x96.c  GroveRelay.c  GroveRotaryAngleSensor.c  GroveTempHumiBaroBME280.c  GroveTempHumiSHT31.c
Samples/: README.md
Samples/GroveLEDButton/: CMakeLists.txt  GroveLEDButton.sln  main.c
Samples/GroveLEDButton/GroveLEDButton/: CMakeLists.txt  GroveLEDButton.vcxproj  main.c
Samples/GroveLightSensor/: CMakeLists.txt  GroveLightSensor.sln  main.c
Samples/GroveLightSensor/GroveLightSensor/: CMakeLists.txt  GroveLightSensor.vcxproj  main.c
Samples/GroveRotaryAngleSensor/: CMakeLists.txt  GroveRotaryAngleSensor.sln  main.c
Samples/GroveRotaryAngleSensor/GroveRotaryAngleSensor/: CMakeLists.txt  GroveRotaryAngleSensor.vcxproj  main.c
Samples/Grove_4_Digital_Display/: CMakeLists.txt  Grove_4_Digital_Display.sln  main.c
Samples/Grove_4_Digital_Display/Grove_4_Digital_Display/: CMakeLists.txt  Grove_4_Digital_Display.vcxproj  main.c  (+2 more)
Samples/Grove_4_Digital_Display_v/: Grove_4_Digital_Display_v.sln
Samples/Grove_Buzzer/: CMakeLists.txt  Grove_Buzzer.sln  main.c
Samples/Grove_OLED_Display/: CMakeLists.txt  GroveOledDisplay.sln  main.c
Samples/Temp_and_Humidity_SHT31/: CMakeLists.txt  Temp_and_Humidity_SHT31.sln  app_manifest.json  main.c
(+14 files in other folders)
